<resources>
    <string name="app_name">BLE Debugger</string>
    <string name="setting">Set</string>
    <string name="cancel">Cancel</string>
    <string name="lack_permission_msg">The app lacks necessary permissions. \n Please click \"Settings\"-\"Permissions\"-to open the required permissions.</string>
    <string name="request_permission">Request for access</string>
    <string name="need_write_setting">App needs to open permissions of modify system settings</string>
    <string name="need_unknown_app_source">App needs to open unknown source permissions</string>
    <string name="scan_record">Scan data：</string>
    <string name="error_format">Error format</string>
    <string name="success_pattern">Success:%d</string>
    <string name="failed_pattern">Failed:%d</string>
    <string name="log_has_copy">Log copied to clipboard</string>
    <string name="connected_not_discover">Connected and waiting for discovery service</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="connected_discovering">Connected and discovering services...</string>
    <string name="connected_discorvered">Connected and successful discovery of services</string>
    <string name="connection_released">Connection has been released</string>
    <string name="filter_keywords">Filter keywords</string>
    <string name="print">Print</string>
    <string name="receive_data">Receive↓：</string>
    <string name="clear">Clear</string>
    <string name="resume">Continue</string>
    <string name="pause">Pause</string>
    <string name="input_demo">format：a5 5a 12 34 56 78</string>
    <string name="send">Send</string>
    <string name="loop">Loop</string>
    <string name="delay">Delay(ms)</string>
    <string name="clear_zero">Zero</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="request_mtu">Request MTU</string>
    <string name="copy_logs">Copy logs</string>
    <string name="show_with_hex">Show with HEX</string>
    <string name="show_with_ascii">Show with ASCII</string>
    <string name="submit">Submit</string>
    <string name="export">Export</string>
    <string name="feedback">Feedback</string>
    <string name="suggestions_and_feedback">Suggestions and feedback</string>
    <string name="view_log">View logs</string>
    <string name="about">About</string>
    <string name="submitting">Submitting...</string>
    <string name="submitted_successfully">Submitted successfully</string>
    <string name="submitted_failed">Submitted failed</string>
    <string name="input_feedback">Please input suggestions or feedback</string>
    <string name="at_most_five">At most five</string>
    <string name="screenshot_optional">Screenshot (Optional)</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="input_email">Please input email address</string>
    <string name="characteristic_read_failed">Characteristic read failed</string>
    <string name="descriptor_read_failed">Descriptor read failed</string>
    <string name="notification_disable_failed">Notification enable failed</string>
    <string name="notification_enable_failed">Notification disable failed</string>
    <string name="connection_create_failed">Connection create failed： %s</string>
    <string name="loading">loading...</string>
    <string name="select_export_directory">Select export dir</string>
    <string name="exporting">Exporting...</string>
    <string name="export_success">Export success</string>
    <string name="ble_devices">Devices</string>
    <string name="bonded">BONDED</string>
    <string name="not_bonded">NOT BONDED</string>
    <string name="no_record">No record</string>
    <string name="no_device_found">No bluetooth device found</string>
    <string name="set_mtu">Set Maximum Transmission Unit</string>
    <string name="input_value">Please input value</string>
    <string name="must_between_23_517">Value must be between 23 and 517</string>
    <string name="current_mtu">Current: %d</string>
    <string name="write_success">Write success</string>
    <string name="write_failed">Write failed</string>
    <string name="mtu_request_failed">MTU request failed</string>
</resources>
