<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuConnect"
        android:title="@string/connect"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menuDisconnect"
        android:title="@string/disconnect"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/menuRequestMtu"
        android:title="@string/request_mtu"
        android:orderInCategory="102"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuCopy"
        android:title="@string/copy_logs"
        android:orderInCategory="103"
        app:showAsAction="never"/>
</menu>