<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <cn.zfs.common.view.ClearEditText
                android:id="@+id/etFilte"
                android:textSize="14dp"
                android:hint="@string/filter_keywords"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp"/>
            <CheckBox
                android:id="@+id/chkPrint"
                android:checked="true"
                android:text="@string/print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/receive_data"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <cn.zfs.common.view.RoundButton
                android:id="@+id/btnClear"
                android:text="@string/clear"
                style="@style/RoundButtonStyle"
                app:rbCornerRadius="2dp"
                app:rbNormalTextColor="@color/colorPrimary"
                app:rbNormalStrokeColor="@color/colorPrimary"
                app:rbNormalFillColor="@color/transparent"
                app:rbPressedTextColor="@color/white"
                app:rbPressedFillColor="@color/colorPrimary"
                android:layout_height="30dp"
                android:layout_width="wrap_content"/>
            <cn.zfs.common.view.RoundButton
                android:id="@+id/btnPause"
                android:text="@string/pause"
                style="@style/RoundButtonStyle"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                app:rbCornerRadius="2dp"
                app:rbNormalTextColor="@color/colorPrimary"
                app:rbNormalStrokeColor="@color/colorPrimary"
                app:rbNormalFillColor="@color/transparent"
                app:rbPressedTextColor="@color/white"
                app:rbPressedFillColor="@color/colorPrimary"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tvLogs"
            android:textColor="#0BBF43"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <cn.zfs.common.view.ClearEditText
            android:id="@+id/etValue"
            android:digits="1234567890abcdefABCDEF "
            android:hint="@string/input_demo"
            android:textSize="14dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"/>
        <ImageView
            android:id="@+id/ivRec"
            android:scaleType="centerCrop"
            android:src="@drawable/drop"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <cn.zfs.common.view.RoundButton
            android:id="@+id/btnSend"
            android:text="@string/send"
            style="@style/RoundButtonStyle"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
            app:rbCornerRadius="2dp"
            app:rbNormalTextColor="@color/colorPrimary"
            app:rbNormalStrokeColor="@color/colorPrimary"
            app:rbNormalFillColor="@color/transparent"
            app:rbPressedTextColor="@color/white"
            app:rbPressedFillColor="@color/colorPrimary"
            android:layout_height="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/chk"
            android:textSize="14dp"
            android:text="@string/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etDelay"
            android:inputType="number"
            android:hint="@string/delay"
            android:layout_marginStart="6dp"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <cn.zfs.common.view.RoundButton
            android:layout_marginStart="8dp"
            android:id="@+id/btnClearCount"
            android:text="@string/clear_zero"
            style="@style/RoundButtonStyle"
            android:layout_width="wrap_content"
            app:rbCornerRadius="2dp"
            app:rbNormalTextColor="@color/colorPrimary"
            app:rbNormalStrokeColor="@color/colorPrimary"
            app:rbNormalFillColor="@color/transparent"
            app:rbPressedTextColor="@color/white"
            app:rbPressedFillColor="@color/colorPrimary"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/tvSuccessCount"
            android:text="成功:0"
            android:textColor="#008c00"
            android:layout_marginStart="8dp"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvFailCount"
            android:text="失败:0"
            android:textColor="#cc0000"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>